# gazingOF

./: README.md  neurobehavior.py  pulsepal.rules  pyproject.toml
gazingCtrl/gazingCtrl/: gazingCtrl.ino
neurobehavior/: ComponentDataTabbutton.qml  ComponentDataTableView.qml  PageChamberView.qml  PageNewSession.qml  PageSessionView.qml  PulsePalCtrl.qml  ResizableRectangle.qml  SectionChamberList.qml  SectionChamberView.qml  SectionDataView.qml  SectionSessionCtrl.qml  SectionSessionList.qml  SerialSetting.qml  SideChamberList.qml  SideSessionList.qml  Tabbutton.qml  WindowVisualStim.qml  __main__.py  ardio.py  chamber.py  chamber_local.py  chamberserver.py  datatablemodel.py  dbmodels.py  main.qml  neurobehavior.py  pulsepal.py  seriallist.py  session.py  sessionlistmodel.py  videoctrl.py  videoviewitem.py
neurobehavior/protocol/: __init__.py  event.py  gift.py  gift_retraining.py  gift_retraining_ppsession.py  gift_reward_cue_test.py  gift_test.py  gift_test10.py  gift_test30.py  gift_test30_pprandomfixed.py  gift_test30_pprewardfixed.py  gift_test_object.py  gift_test_object_pprewardfixed.py  gift_test_object_pprewardhead.py  gift_test_ppiticue.py  (+19 more)
pulsepal/: ArCOM.py  PulsePal.py
ui/: ComponentDataTabbutton.qml  ComponentDataTableView.qml  PageChamberView.qml  PageNewSession.qml  PageSessionView.qml  PulsePalCtrl.qml  ResizableRectangle.qml  SectionChamberList.qml  SectionChamberView.qml  SectionDataView.qml  SectionSessionCtrl.qml  SectionSessionList.qml  SerialSetting.qml  SideChamberList.qml  SideSessionList.qml  Tabbutton.qml  WindowVisualStim.qml  main.qml
(+7 files in other folders)
