[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "neurobehavior"
dynamic = ["version"]
dependencies = [
  "PySide6",
  "sqlalchemy",
  "pandas",
  "pyserial",
  "opencv-python"
]
authors = [
  {name = "Jinhee Baek", email = "jinhee.baek@gmail.com"}
]

[project.gui-scripts]
neurobehavior = "neurobehavior.main_gui:main_gui"

